<resources>
    <string name="app_name">PicBox</string>
    <string name="photos">Photos</string>
    <string name="album">Album</string>
    <string name="creativity">Creativity</string>
    <string name="setting">Setting</string>
    <string name="camera_description">Take a photo with camera</string>
    <string name="permissions">Permissions</string>
    <string name="camera_permission">Access to use camera</string>
    <string name="camera_permission_description">Take photos and make video</string>
    <string name="gallery_permission">Access to use all photos in gallery</string>
    <string name="gallery_permission_description">Edit and save your photos</string>
    <string name="desc_iv_display_media">Full screen media display</string>
    <string name="desc_iv_fragment_photo">Media thumbnail</string>
    <string name="title_ic_toggle_favourite">Favourite</string>
    <string name="desc_ic_toggle_favourite">Toggle favourite</string>
    <string name="title_ic_more">More</string>
    <string name="desc_ic_more">More actions</string>
    <string name="media">Media</string>
    <string name="rotation_lock">Rotation lock</string>
    <string name="theme">Theme</string>
    <string name="prevent_your_phone_rotation">Prevent your phone rotation</string>
    <string name="change_to_dark_theme">Change to dark theme</string>
    <string name="dark_theme">Dark theme</string>
    <string name="security">Security</string>
    <string name="password_image">Password Image</string>
    <string name="select_number_of_column_in_each_row">Select number of column in each row</string>
    <string name="column_in_row">Column in row</string>
    <string name="grid">Grid</string>
    <string name="select_app_layout_mode">Select app\'s layout mode</string>
    <string name="layout_mode">Layout mode</string>
    <string name="floating_button">Floating button</string>
    <string name="show_hide_floating_button">show hide floating button</string>
    <string name="language">Language</string>
    <string name="select_app_language">Select app language</string>
    <string name="span_count_default">4</string>
    <string name="language_default">English</string>
    <string name="select_number_column_per_row">Select number column per row</string>
    <string name="number_columns_in_each_row">Number columns in each row</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="favorite">Favorite</string>
    <string name="secret">Secret</string>
    <string name="Creativity">Creativity</string>
    <string name="trash">Trash</string>
    <string name="from_device">From device</string>
    <string name="detail_action_add_to_album">Add to album</string>
    <string name="detail_action_use_for">Use for</string>
    <string name="detail_action_slide_show">Slide show</string>
    <string name="detail_action_print">Print</string>
    <string name="detail_action_help">Help</string>
    <string name="detail_action_repeat_video">Repeat Video</string>
    <string name="detail_add_note">Add note…</string>
    <string name="detail">Detail</string>
    <string name="location">Location</string>
    <string name="detail_go_to_map">Go to map</string>
    <string name="detail_desc_media_details">Media details</string>
    <string name="detail_bottom_bar_share">Share</string>
    <string name="detail_bottom_bar_edit">Edit</string>
    <string name="detail_bottom_bar_delete">Delete</string>
    <string name="detail_bottom_bar_secret">Secret</string>
    <string name="video_btn_desc_video">Video</string>
    <string name="gif_btn_desc_gif">GIF</string>
    <string name="select_image_group_mode">Select image group mode</string>
    <string name="group_mode">Group mode</string>
    <string name="month">Month</string>
    <string name="day">Day</string>
    <string name="year">Year</string>
    <string name="none">None</string>
    <string name="group_mode_dialog_title">Select Group Mode</string>
    <string name="choose_language">Choose Language</string>
    <string name="language_english">English</string>
    <string name="language_vietnamese">Vietnamese</string>
    <string name="setting_ic_desc_setting_language">Setting language</string>
    <string name="desc_image_delete">Image(s) to be deleted</string>
    <string name="desc_icon_delete_image">Desc icon delete image</string>
    <string name="move_to_trash_bin">Move to trash bin</string>
    <string name="delete_permanently">Delete permanently</string>
    <string name="delete_deeply">Delete deeply</string>
    <string name="helper_text_move_to_trash_bin">You can recover files in trash bin within 30 days.</string>
    <string name="helper_text_delete_permanently">You can\'t recover deleted files.</string>
    <string name="helper_text_delete_deeply">Overwrite this file, make sure this file can\'t be recovered!</string>
    <string name="set_as_wallpaper">Set as device\'s wallpaper</string>
    <string name="set_as_background">Set as app\'s background</string>
    <string name="select_multi_add_to_album">Add to album</string>
    <string name="select_multi_move_to_secret">Move to secret album</string>
    <string name="select_multi_compound_images">Compound images</string>
    <string name="select_multi__slide_show">Slide show</string>
    <string name="select_multi_make_gif">Make GIF</string>
    <string name="select_multi_add_to_favorites">Add to favorites</string>
    <string name="save">Save</string>
    <string name="edit_filename">Edit filename:</string>
    <string name="change_filename">Change filename…</string>
    <string name="enter_your_pin">Enter your PIN:</string>
    <string name="forgot_your_password"><u>Forgot your password</u></string>
    <string name="wrong_password">Your password is incorrect</string>
    <string name="password_must_have_5_character">Password must have 5 character</string>
    <string name="recover_question">Recover Question</string>
    <string name="which_pet_do_you_like_most">Which pet do you like most?</string>
    <string name="what_is_your_favorite_food">What is your favorite food?</string>
    <string name="wrong_recover_question_answer">Wrong recover question answer</string>
    <string name="register_password">Register Password</string>
    <string name="answer_can_not_empty">answer can not empty</string>
    <string name="pick_media_files">Pick media files</string>
    <string name="header_selected"> selected</string>
    <string name="choose_an_album">Choose an album</string>
    <string name="create_a_new_album">Create a new album</string>
    <string name="enter_name_of_new_album">Enter name of the new album …</string>
    <string name="select_files">Select files</string>
    <string name="toast_error_create_album">Error when create album</string>
    <string name="toast_add_file_to_album">Add these files to album %s successfully!</string>
    <string name="toast_delete_successfully">Delete successfully!</string>
    <string name="option_grid">Grid</string>
    <string name="option_list">List</string>
    <string name="option_staggered">Staggered grid</string>
    <string name="option_spanned_grid">Spanned grid</string>
    <string name="toast_have_not_create_password">You haven\'t created password yet</string>
    <string name="require_password_for_view_image">Require password for view image</string>
    <string name="delete">Delete</string>
    <string name="choose_animation">Choose animation:</string>
    <string name="picbox">PicBox</string>
    <string name="coming_soon">Coming soon...</string>
</resources>