<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_select_all"
        android:icon="@drawable/ic_baseline_help_outline_24"
        android:title="abc"
        app:showAsAction="always"
        android:contentDescription="@string/desc_ic_toggle_favourite"
         />

    <item
        android:id="@+id/action_deselect_all"
        android:icon="@drawable/ic_baseline_help_outline_24"
        android:title="@string/title_ic_more"
        app:showAsAction="always"
        android:contentDescription="@string/desc_ic_more"
         />
    <item
        android:id="@+id/action_delete"
        android:icon="@drawable/ic_trash"
        android:title="@string/title_ic_toggle_favourite"
        android:contentDescription="@string/desc_ic_toggle_favourite"
        app:showAsAction="always"
        />

    <item
        android:id="@+id/ic_more"
        android:icon="@drawable/ic_baseline_more_vert_24"
        android:title="@string/title_ic_more"
        android:contentDescription="@string/desc_ic_more"
        app:showAsAction="always"
        />
</menu>