<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/tv_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="20sp"
        android:textStyle="bold" />

    <RadioGroup
        android:id="@+id/languageSettingRadioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/rb_move_to_trash_bin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/move_to_trash_bin" />

        <RadioButton
            android:id="@+id/rb_delete_permanently"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/delete_permanently" />

        <RadioButton
            android:id="@+id/rb_deeply_delete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/delete_deeply" />

    </RadioGroup>

    <TextView
        android:id="@+id/tv_helper_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="32dp"
        android:paddingEnd="12dp"
        android:textStyle="italic"
        android:textSize="14sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="end">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="12dp"
            android:backgroundTint="@color/grey"
            android:text="@string/cancel"
            app:cornerRadius="8dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_confirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confirm"
            app:cornerRadius="8dp" />
    </LinearLayout>
</LinearLayout>