<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/permissionSection"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:text="@string/permissions"
                android:textColor="@color/primary"
                android:textSize="24dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/cameraPermissionButton"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:gravity="start"
                android:text="@string/camera_permission"
                android:textAllCaps="false"
                app:icon="@drawable/ic_baseline_arrow_forward_ios_24"
                app:iconGravity="end"
                app:strokeColor="@color/black_50"
                app:strokeWidth="1dp"
                app:cornerRadius="0dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:text="@string/camera_permission_description" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/galleryPermissionButton"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:gravity="start"
                android:text="@string/gallery_permission"
                android:textAllCaps="false"
                app:icon="@drawable/ic_baseline_arrow_forward_ios_24"
                app:iconGravity="end"
                app:strokeColor="@color/black_50"
                app:strokeWidth="1dp"
                app:cornerRadius="0dp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:text="@string/gallery_permission_description" />


        </LinearLayout>
    </ScrollView>
</LinearLayout>