<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/titleRegisterPasswordTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:textSize="24sp"
        android:textStyle="bold"
        android:text="@string/register_password"/>

    <LinearLayout
        android:id="@+id/passwordPinViewLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:visibility="visible">

        <com.chaos.view.PinView
            android:id="@+id/passwordPinView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:inputType="numberPassword"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:itemCount="5"
            app:itemRadius="10dp" />
    </LinearLayout>

    <TextView
        android:id="@+id/notifyTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="@color/red"
        android:textSize="16sp" />

    <LinearLayout
        android:id="@+id/recoverQuestionLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/which_pet_do_you_like_most"
            android:textSize="16sp"
            android:textStyle="bold"/>
        <EditText
            android:id="@+id/petQuestionEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/what_is_your_favorite_food"
            android:textSize="16sp"
            android:textStyle="bold"/>
        <EditText
            android:id="@+id/foodQuestionEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <Button
        android:id="@+id/registerPasswordButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/confirm" />
</LinearLayout>
